ci: :green_heart: fix ci test for github actions
#1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle@master
         env:
-          SNYK_TOKEN: ${{secrets.SNYK_AUTH}
+          SNYK_TOKEN: ${{secrets.SNYK_AUTH}}
