--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,25 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
+  codecov:
+    name: Test Coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Actions
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '>=1.18.0'
+
+
+      - name: Run coverage
+      - run: go test ./...  -coverprofile=coverage.out
+
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -31,7 +50,7 @@ jobs:
           go-version: '>=1.18.0'
       - run: go version
       - run: go vet ./... 2>&1 | tee govet.out
-      - run: go test ./... -race -coverprofile=coverage.out
+      - run: go test ./...  -coverprofile=coverage.out
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
