--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,17 +14,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - uses: actions/setup-go@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
         with:
           go-version: '>=1.18.0'
 
 
       - name: Run coverage
-      - run: go test ./...  -coverprofile=coverage.out
+        run: go test ./...  -coverprofile=coverage.out
 
       - name: Upload coverage to Codecov
-      - run: bash <(curl -s https://codecov.io/bash)
+        run: bash <(curl -s https://codecov.io/bash)
   test:
     name: Test
     runs-on: ubuntu-latest
